tests/success/default_value_string_variable.tig
let
	var a: string := f()
	function f(): string = a
in
	print(a)
end
