tests/fail/times_between_non_valued_right.tig
let 
    var a := 0
in
    1 * (a := 1)
end
